change git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 taskManagement/projects/__pycache__/*
+taskManagement/taskManagement/__pycache__/*
+taskManagement/projects/migrations/__pycache__/*
